# userspace_wireguard

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindCryptoPP.cmake
include/: CMakeLists.txt
include/uwg/: aead.hpp  clear_key.hpp  config.hpp  cookie.hpp  defs.hpp  dh.hpp  dump.hpp  hash.hpp  hmac.hpp  initial_key.hpp  initiator.hpp  ip_address.hpp  is_continous_memory.hpp  kdf.hpp  load_key.hpp  mac.hpp  peer_identifier.hpp  responder.hpp  right_type.hpp  session.hpp  static_vector_view.hpp  timestamp.hpp  transport.hpp  types.hpp  window.hpp  xaead.hpp
src/: CMakeLists.txt  uwg.cpp
